--- a/public/style.css
+++ b/public/style.css
@@ -80,3 +80,11 @@ body {
       opacity: 0;
     }
   }
+
+  .gm-style-cc {
+    display: none !important;
+  }
+  
+  .gm-style a[href^="https://maps.google.com/maps"] {
+    display: none !important;
+  }
